=============

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------
- It is now possible to randomize the time of the first beacon from an access point.
  Use an attribute "EnableBeaconJitter" to enable/disable this feature.

Bugs fixed
----------
- Bug 1722 - beacons transmitted concurrently

Release 3.18
=============

Availability
------------
This release is available from: 
http://www.nsnam.org/release/ns-allinone-3.18.tar.bz2

Supported platforms
-------------------
These platforms have been tested; others may work also:
- Fedora Core 18 (32/64 bit) with g++-4.7.2
- Fedora Core 17 (32/64 bit) with g++-4.7.0
- Ubuntu 13.04 (32/64 bit) with g++-4.7.3
- Ubuntu 12.04 (32/64 bit) with g++-4.6.3
- Ubuntu 10.04.4 LTS (64 bit) with g++-4.4.3
- OS X Mountain Lion 10.8.3 with g++-4.2.1
- FreeBSD 9.1-RELEASE (64 bit) with g++-4.2.1

New user-visible features
-------------------------
- Time attributes can now be bounded.  See attribute-test-suite.cc for an
  example.
- Data collection components have been added to the stats module.  These
  components can be used to generate time series data in files and plots.
- IPv6 address class 2001:db8::/32 is now dropped by routers (RFC 3849).
- New generic hash function interface.  Two hash functions are provided:
  murmur3 (default), and the venerable FNV1a.  See the Hash Functions
  section in the Manual.
- New Mac16Address has been added, Mac64Address is now in-line with 
  Mac48Address and all the three can be used in IPv6 autoconfigure. 
- Previously, the use of Building models was limited to the use of the
  companion BuildingsMobilityModel. Now, any MobilityModel can be
  used with Building models. 
- The latest LTE module code by the LENA project has been merged,
  including the following new features: 
   - PHY support for UE measurements (RSRP and RSRQ)